[package]
name = "elmar-mppt"
authors = [
    "The Team Arrow Racing Association firmware development team",
    "Liam Kinne <liam@kinne.io>"
]
description = "Driver for the Elmar MPPT."
categories = ["embedded", "no-std"]
documentation = "https://docs.rs/elmar-mppt"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
bitflags = "1.3.2"
